@@ -1,5 +1,9 @@
 2011-04-27  Mark Grondona <mgrondona@llnl.gov>
 
+	* tests/test-lib.sh, tests/t2001-ssh.sh :
+	  Add a simplified shell function implemntation of seq(1).
+	  Remove SEQ prereq. (Some systems don't have seq(1)).
+
 	* src/pdsh/opt.h, src/pdsh/opt.c:
 	  Don't use static buffers for ruser and luser. Instead allocate
 	  memory based on the return value of sysconf(_SC_LOGIN_NAME_MAX)
